--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -1,9 +1,8 @@
 [tool.poetry]
-name = "src"
+name = "eco_explore_grpc"
 version = "0.1"
 description = "GRPC for coments"
 authors = ["Obet3000 <zs20015717@estudiantes.uv.mx>"]
-readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -11,6 +10,8 @@ grpcio = "^1.60.0"
 grpcio-tools = "^1.60.0"
 protobuf = "^4.25.1"
 pymongo = "^4.6.1"
+python-dotenv = "^1.0.0"
+pydantic = "^2.5.3"
 
 
 [build-system]
